k8s/stage/quarkus-stage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-stage
  labels:
    name: quarkus-stage
