k8s/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  namespace: quarkus-stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: quarkus-app
          image: arthurdbs/quarkus-app:latest
          ports:
            - containerPort: 8080
