k8s/stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
  namespace: quarkus-stage
spec:
  selector:
    app: quarkus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
